--- a/css/style.css
+++ b/css/style.css
@@ -1,65 +1,96 @@
 /****** General ***********/
 * {
     font-family: 'Raleway', sans-serif;
+    margin: 0;
 }
 
-:root {
+:root{
     --main-color: #0065FC;
     --main-bg-color: #F2F2F2;
     --filter-bg-color: #DEEBFF;
 }
 
-.fa-solid {
+.fa-solid{
     color: var(--main-color);
 }
 
-body {
+body{
     display: flex;
     justify-content: center;
 }
 
-.main-container {
+.main-container{
     width: 100%;
     max-width: 1440px;
     padding: 0 50px;
     box-sizing: border-box;
 }
 
-.section-title {
+.section-title{
     margin: 0;
     font-size: 22px;
 }
 
-.card {
+.card{
     background-color: white;
     border-radius: 20px;
     padding: 5px;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
 }
 
-.card img {
+.card img{
     object-fit: cover;
 }
 
-.card-title {
+.card-title{
     font-size: 16px;
 }
 
-.euro {
+.euro{
     font-weight: 700;
 }
 
-.neutralStar {
+.neutralStar{
     color: var(--main-bg-color)
 }
 
+/****** EN TETE *****/
+a{
+    color: black;
+    text-decoration: none;
+}
+
+nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav img{
+    width: 61.09px;
+    height: 19px;
+    padding: 30px 50px;
+    gap: 10px;
+}
+
+nav a{
+    margin-left: 68px;
+}
+
+a:hover{
+    color: #0065FC;
+    border-top: 2px solid #0065FC;
+    padding-top: 19px;
+}
+
 /****** Hebergements And Populaires ***********/
-.hebergements-and-populaires {
+.hebergements-and-populaires{
     display: flex;
     justify-content: space-between;
 }
 
-.hebergements-and-populaires section {
+.hebergements-and-populaires section{
     background-color: var(--main-bg-color);
     border-radius: 20px;
     padding: 30px;
@@ -67,34 +98,34 @@ body {
 }
 
 /****** Hebergements ***********/
-.hebergements {
+.hebergements{
     width: 65%;
 }
 
 /****** Populaires ***********/
-.populaires {
+.populaires{
     width: 32%;
 }
 
-.populaires-title {
+.populaires-title{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.populaires-cards .card {
+.populaires-cards .card{
     display: flex;
     margin-top: 33px;
 }
 
-.populaires-cards img {
+.populaires-cards img{
     width: 33%;
     height: 136px;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
 }
 
-.populaires-cards .card-content {
+.populaires-cards .card-content{
     width: 67%;
     padding-left: 15px;
     display: flex;
@@ -103,16 +134,16 @@ body {
     box-sizing: border-box;
 }
 
-.populaires-cards .card-title {
+.populaires-cards .card-title{
     margin-top: 10px;
     margin-bottom: 4px;
 }
 
-.populaires-cards .card-subtitle {
+.populaires-cards .card-subtitle{
     margin: 0;
 }
 
-.populaires-cards .card-rating {
+.populaires-cards .card-rating{
     margin-bottom: 5px;
 }
 
@@ -123,40 +154,40 @@ body {
 
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
-@media (max-width: 1024px) {
-    .hebergements-and-populaires {
+@media (max-width: 1024px){
+    .hebergements-and-populaires{
         flex-direction: column;
     }
 
-    .hebergements {
+    .hebergements{
         width: 100%;
     }
 
-    .populaires {
+    .populaires{
         width: 100%;
         margin-top: 50px;
     }
 
-    .populaires-cards {
+    .populaires-cards{
         display: flex;
         flex-direction: row;
         justify-content: space-between;
     }
 
-    .populaires-cards .card {
+    .populaires-cards .card{
         width: 30%;
     }
 
-    .populaires-cards .card-title {
+    .populaires-cards .card-title{
         font-size: 14px;
     }
 
-    .populaires-cards .card-subtitle {
+    .populaires-cards .card-subtitle{
         font-size: 13px;
     }
 }
 
 /* Small devices (phones, less than 768px) */
-@media (max-width: 767.98px) {
+@media (max-width: 767.98px){
     /* ... */
 }
