--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,31 @@ header{
     margin-bottom: 40px;
 }
 
+footer{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    height: 163px;
+    margin-left: 50px;
+    margin-right: 50px;
+    background-color: #F2F2F2;
+}
+
+.pied-de-page{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 20px;
+}
+
+.pied-de-page ul{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+.pied-de-page li{
+    list-style-type: none;
+}
+
 .search-place,
 .hebergements-and-populaires,
 .activities{
@@ -25,6 +50,12 @@ header{
     margin-bottom: 35px;
 }
 
+.filtres p,
+.affichage p,
+.pied-de-page p{
+    font-size: 18px;
+    font-weight: 700;
+}
 
 :root{
     --main-color: #0065FC;
@@ -152,13 +183,6 @@ button{
     flex-direction: row;
     align-items: center;
     gap: 15px;
-    border: dashed fuchsia;
-}
-
-.filtres p,
-.affichage p{
-    font-size: 18px;
-    font-weight: 700;
 }
 
 .categories{
@@ -181,8 +205,17 @@ label i{
     margin-right: 10px;
 }
 
-input[type="checkbox"]{
+.categories input{
     position: absolute;
+    opacity: 0;
+}
+
+input:checked + label{
+    background-color: #DEEBFF;
+}
+
+label:hover{
+    background-color: #DEEBFF;
 }
 
 label:hover{
@@ -209,14 +242,18 @@ label:hover{
 /****** Hebergements And Populaires ***********/
 .hebergements-and-populaires{
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+    gap: 40px;
+    border: solid fuchsia;
 }
 
 .hebergements-and-populaires section{
     background-color: var(--main-bg-color);
-    border-radius: 20px;
-    padding: 30px;
     box-sizing: border-box;
+    border-radius: 20px;
+    height: 611px;
+    padding: 30px;
+    border: solid green;
 }
 
 /****** Hebergements ***********/
@@ -224,25 +261,29 @@ label:hover{
 .hebergements{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    width: 65%;
     gap: 30px;
 }
 
 .hebergements-find{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-columns: 208px;
+    width: 100%;
     gap: 30px;
 }
 
 .hebergements-find .card{
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    width: 100%;
+    height: 197px;
 }
 
 .hebergements-find img{
+    object-fit: cover;
     width: 100%;
-    height: 124px;
+    height: 60%;
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
 }
@@ -251,24 +292,33 @@ label:hover{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 8px;
-    padding-left: 15px;
+    height: 40%;
+    padding-left: 10px;
+    margin-top: 9px;
+    margin-bottom: 15px;
+
 }
 
 .hebergements-find .card-txt{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     gap: 8px;
 }
 
 .hebergements-find .card-rating{
-    margin-bottom: 15px;
+    display: flex;
+    flex-direction: row;
+    gap: 2px;
 }
 
 /****** Populaires ***********/
 .populaires{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     width: 32%;
-    margin: 15px;
+    gap: 30px;
 }
 
 .populaires-title{
@@ -277,25 +327,35 @@ label:hover{
     align-items: center;
 }
 
+.populaires-cards{
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    width: 100%;
+    gap: 30px;
+}
+
 .populaires-cards .card{
     display: flex;
-    margin-top: 30px;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .populaires-cards img{
     width: 33%;
-    height: 136px;
+    height: 134px;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
 }
 
 .populaires-cards .card-content{
     width: 67%;
+    height: 134px;
     padding-left: 15px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     box-sizing: border-box;
+    border: solid blue;
 }
 
 .populaires-cards .card-title{
@@ -304,7 +364,10 @@ label:hover{
 }
 
 .populaires-cards .card-rating{
-    margin-bottom: 5px;
+    display: flex;
+    flex-direction: row;
+    gap: 2px;
+    padding-bottom: 5px;
 }
 
 /****** Activités ******/
@@ -348,8 +411,25 @@ label:hover{
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
 @media (max-width: 1024px){
+    .search-place,
+    .hebergements-and-populaires,
+    .activities,
+    footer{
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+
+    header img{
+        margin-left: 50px;
+    }
+
+    header nav{
+        margin-right: 50px;
+    }
+
     .hebergements-and-populaires{
         flex-direction: column;
+        align-items: center;
     }
 
     .hebergements{
@@ -378,9 +458,15 @@ label:hover{
     .populaires-cards .card-subtitle{
         font-size: 13px;
     }
+
+    .place-to-be img{
+        width: 100%;
+        height: 200px;
+    }
 }
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px){
-    /* ... */
+
+    
 }
