--- a/css/style.css
+++ b/css/style.css
@@ -1,162 +1,708 @@
 /****** General ***********/
 * {
     font-family: 'Raleway', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
-:root {
+:root{
     --main-color: #0065FC;
     --main-bg-color: #F2F2F2;
     --filter-bg-color: #DEEBFF;
+    --border-top: 2px;
 }
 
-.fa-solid {
+.fa-solid{
     color: var(--main-color);
 }
-
-body {
-    display: flex;
-    justify-content: center;
+/* #region COMPONMENT */
+a{
+    color: black;
+    text-decoration: none;
 }
 
-.main-container {
+.filtres p,
+.affichage p,
+.pied-de-page p{
+    font-size: 18px;
+    font-weight: 700;
+}
+
+
+.search-place,
+.hebergements-and-populaires,
+.activities{
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 35px;
+}
+
+.main-container{
     width: 100%;
     max-width: 1440px;
     padding: 0 50px;
     box-sizing: border-box;
 }
 
-.section-title {
+.section-title{
     margin: 0;
     font-size: 22px;
 }
 
-.card {
+.card{
     background-color: white;
     border-radius: 20px;
     padding: 5px;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
 }
 
-.card img {
+.card img{
     object-fit: cover;
 }
 
-.card-title {
+.card-title{
     font-size: 16px;
 }
 
-.euro {
+.card-subtitle{
+    font-size: 14px;
+}
+
+.euro{
     font-weight: 700;
 }
 
-.neutralStar {
+.neutralStar{
     color: var(--main-bg-color)
 }
+/* #endregion COMPONMENT */
 
-/****** Hebergements And Populaires ***********/
-.hebergements-and-populaires {
+/* #region HEADER */
+header{
     display: flex;
     justify-content: space-between;
+    height: 80px;
+    margin-bottom: 40px;
 }
 
-.hebergements-and-populaires section {
-    background-color: var(--main-bg-color);
-    border-radius: 20px;
-    padding: 30px;
-    box-sizing: border-box;
+header img{
+    margin: 30px;
 }
 
-/****** Hebergements ***********/
-.hebergements {
-    width: 65%;
-}
-
-/****** Populaires ***********/
-.populaires {
-    width: 32%;
-}
-
-.populaires-title {
+nav{
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    gap: 68px;
+    margin-bottom: 44px;
 }
 
-.populaires-cards .card {
+nav a{
+    border-top: var(--border-top) solid transparent;
+    padding-top: 14px;
+}
+
+nav a:hover{
+    color: #0065FC;
+    border-top: var(--border-top) solid #0065FC;
+}
+
+/* #endregion HEADER */
+
+/* #region MAIN */
+
+body{
     display: flex;
-    margin-top: 33px;
+    justify-content: center;
 }
 
-.populaires-cards img {
-    width: 33%;
-    height: 136px;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
-}
+    /* #region RESEARCH */
 
-.populaires-cards .card-content {
-    width: 67%;
-    padding-left: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    box-sizing: border-box;
-}
-
-.populaires-cards .card-title {
-    margin-top: 10px;
-    margin-bottom: 4px;
-}
-
-.populaires-cards .card-subtitle {
-    margin: 0;
-}
-
-.populaires-cards .card-rating {
-    margin-bottom: 5px;
-}
-
-
-
-
-/* Le code ci-dessous correspond à la version responsive uniquement */
-
-/****** Media queries ***********/
-/* Medium devices (tablets, less/equal than 1024px) */
-@media (max-width: 1024px) {
-    .hebergements-and-populaires {
+    .search-place{
+        display: flex;
         flex-direction: column;
+        justify-content: center;
+        gap: 35px;
     }
 
-    .hebergements {
-        width: 100%;
+    .barre-de-recherche{
+        display: grid;
+        grid-template-columns: 50px 195px 132px;
+        font-weight: bold;
+        font-size: 18px;
     }
 
-    .populaires {
-        width: 100%;
-        margin-top: 50px;
+    label{
+        background-color: #F2F2F2;
+        border-radius: 15px 0px 0px 15px;
+        border: 1px solid #F2F2F2;
+        padding: 15px 18px;
     }
 
-    .populaires-cards {
+    .fa-location-dot{
+        margin: 0;
+        color: black;
+    }
+
+    .fa-magnifying-glass{
+        color: white;
+    }
+
+    .fa-info{
+        width: 4px;
+        height: 10px;
+    }
+
+    input{
+        border: 1px solid #F2F2F2;
+        padding: 14px 24px;
+        font-weight: 700;
+        font-size: 18px;
+    }
+
+
+    button{
+        background-color: #0065FC;
+        color: #FFFFFF;
+        padding: 14px 16px;
+        border-radius: 0px 15px 15px 0px;
+        border: 1px solid #0065FC;
+        font-weight: 700;
+        font-size: 18px;
+    }
+
+    .icone{
+        display: none;
+    }
+
+    .filtres{
         display: flex;
         flex-direction: row;
         justify-content: space-between;
     }
 
-    .populaires-cards .card {
-        width: 30%;
+    .categories{
+        display: flex;
+        flex-direction: row;
+        gap: 15px;
     }
 
-    .populaires-cards .card-title {
-        font-size: 14px;
+    .categories label{
+        background-color: white;
+        border: 2px solid #d9d9d9;
+        border-radius: 50px;
+        font-size: 17px;
+        font-weight: 700;
+        padding: 15px 19px;
+        cursor: pointer;
     }
 
-    .populaires-cards .card-subtitle {
-        font-size: 13px;
+    label i{
+        margin-right: 10px;
     }
+
+    .categories input{
+        position: absolute;
+        opacity: 0;
+    }
+
+    input:checked + label{
+        background-color: #DEEBFF;
+    }
+
+    label:hover{
+        background-color: #DEEBFF;
+    }
+
+    label:hover{
+        background-color: #DEEBFF;
+    }
+
+    .places-number{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .places-number i{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 7px 10px;
+        border: 1px solid #d9d9d9;
+        border-radius: 50%;
+    }
+
+    /* #endregion RESEARCH */
+
+    /* #region HOSTS & FAME PLACES */
+    .hebergements-and-populaires{
+        display: flex;
+        flex-direction: row;
+        gap: 40px;
+    }
+    
+    .hebergements-and-populaires section{
+        background-color: var(--main-bg-color);
+        box-sizing: border-box;
+        border-radius: 20px;
+        padding: 30px;
+    }
+
+        /* #region HOSTS */
+        .hebergements{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            /*width: 65%;*/
+            flex-grow: 1;
+            height: 611px;
+            gap: 30px;
+        }
+        
+        .hebergements-find{
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            width: 100%;
+            gap: 30px;
+        }
+        
+        .hebergements-find .card{
+            display: flex;
+            flex-direction: column;
+            height: 197px;
+        }
+        
+        .hebergements-find img{
+            width: 100%;
+            height: 114px;
+            border-top-right-radius: 20px;
+            border-top-left-radius: 20px;
+        }
+        
+        .hebergements-find .card-content{
+            display: flex;
+            flex-direction: column;
+            height: 64px;
+            gap: 8px;
+            padding-left: 10px;
+        }
+        
+        .hebergements-find .card-rating{
+            display: flex;
+            flex-direction: row;
+            gap: 2px;
+        }
+
+        /* #endregion HOSTS */
+
+        /* #region FAME PLACES */
+
+        .populaires{
+            width: 32%;
+            height: 611px;
+        }
+        
+        .populaires-title{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        
+        .populaires-cards .card{
+            display: flex;
+            margin-top: 30px;
+        }
+        
+        .populaires-cards img{
+            width: 33%;
+            height: 134px;
+            border-top-left-radius: 20px;
+            border-bottom-left-radius: 20px;
+        }
+        
+        .populaires-cards .card-content{
+            width: 67%;
+            height: 134px;
+            padding-left: 15px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            box-sizing: border-box;
+        }
+        
+        .populaires-cards .card-title{
+            margin-top: 15px;
+            margin-bottom: 4px;
+        }
+        
+        .populaires-cards .card-rating{
+            display: flex;
+            flex-direction: row;
+            gap: 2px;
+            padding-bottom: 5px;
+        }
+
+        /* #endregion FAME PLACES */
+
+    /* #endregion HOSTS & FAME PLACES */
+
+    /* #region ACTIVITIES */
+
+    .activities{
+        display: flex;
+        flex-direction: column;
+        padding: 30px;
+        box-sizing: border-box;
+        gap: 30px;
+    }
+    
+    .activities-offer{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-auto-columns: 297px;
+        gap: 30px;
+    }
+    
+    .place-to-be{
+        background-color: white;
+        border-radius: 20px;
+        filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+    }
+    
+    .place-to-be img{
+        object-fit: cover;
+        width: 100%;
+        height: 380px;
+        border-top-right-radius: 20px;
+        border-top-left-radius: 20px;
+    }
+    
+    .place-to-be-title{
+        padding: 20px 19px;
+        font-size: 16px;
+        font-weight: 700;
+    }
+
+    /* #endregion ACTIVITIES */
+
+/* #endregion MAIN */
+
+/* #region FOOTER */
+footer{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    height: 163px;
+    margin-left: 50px;
+    margin-right: 50px;
+    background-color: #F2F2F2;
 }
 
-/* Small devices (phones, less than 768px) */
-@media (max-width: 767.98px) {
-    /* ... */
+.pied-de-page{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 20px;
 }
+
+.pied-de-page ul{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+.pied-de-page li{
+    list-style-type: none;
+}
+/* #endregion FOOTER */
+
+
+/* #region MEDIA QUERIES */
+    /* #region Medium devices (tablets, less/equal than 1024px) */
+    @media (max-width: 1024px){
+        .search-place,
+        .hebergements-and-populaires,
+        .activities,
+        footer{
+            margin-left: 50px;
+            margin-right: 50px;
+        }
+
+        header{
+            margin-bottom: 30px;
+        }
+
+        header img{
+            margin-left: 50px;
+        }
+
+        header nav{
+            margin-right: 50px;
+        }
+
+        .filtres{
+            display: flex;
+            flex-wrap: wrap; /*a tester*/
+            gap: 20px;
+        }
+
+        .hebergements-and-populaires{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 50px;
+        }
+
+        .hebergements{
+            width: 100%;
+        }
+
+        .populaires{
+            width: 100%;
+            height: 252px;
+        }
+
+        .populaires-cards{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+        }
+
+        .populaires-cards .card{
+            display: flex;
+            flex-direction: row;
+            margin-top: 20px;
+            width: 30%;
+        }
+
+        .populaires-cards .card-title{
+            font-size: 14px;
+        }
+
+        .populaires-cards .card-subtitle{
+            font-size: 13px;
+        }
+
+        .place-to-be{
+            height: 270px;
+        }
+
+        .place-to-be img{
+            object-fit: cover;
+            width: 100%;
+            height: 200px;
+        }
+
+        .place-to-be-title{
+            height: 70px;
+        }
+    }
+    /* #endregion Medium devices (tablets, less/equal than 1024px) */
+
+    /* #region Small devices (phones, less than 768px) */
+    @media (max-width: 767.98px){
+
+        .main-container,
+        footer{ /* si je ne le mets pas le css ne s'applique pas */
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            gap: 35px;
+            margin: 0;
+            padding: 0;
+        }
+
+        header{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin: 0;
+            height: 115px;
+        }
+
+        header img{
+            margin: 30px;
+        }
+        
+        header nav{
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            justify-items: center;
+            margin: 0;
+            width: 100%;
+            gap: 0;
+        }
+
+        nav a{
+            display: flex;
+            justify-content: center;
+            padding-top: 0;
+            padding-bottom: 15px;
+            width: 100%;
+            border-top: none;
+            border-bottom: var(--border-top) solid #F2F2F2;
+        }
+
+        nav a:hover{
+            padding-top: 0;
+            padding-bottom: 15px;
+            border-top: none;
+            border-bottom-width: 100%;
+            border-bottom: var(--border-top) solid #0065FC;
+        }
+
+        main{
+            display: flex;
+            flex-direction: column;
+            gap: 35px;
+        }
+
+        .search-place,
+        .hebergements-and-populaires,
+        .activities{
+            margin: 0;
+        }
+
+        .search-place div{
+            display: flex;
+            flex-wrap: wrap;
+            padding-left: 20px;
+            padding-right: 20px;
+        }
+
+        .barre-de-recherche{
+            display: grid;
+            grid-template-columns: 50px 236px 49px;
+            justify-content: center;
+        }
+
+        input{
+            border-right: none;
+        }
+
+        button{
+            border-radius: 15px;
+        }
+
+        button .text{
+            display: none;
+        }
+
+        button .icone{
+            display: inline-block;
+        }
+
+        .filtres{
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        .categories{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            width: 100%;
+            row-gap: 20px;
+            column-gap: 10px;
+        }
+        .categories label{
+            font-size: 14px;
+        }
+
+        .places-number{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+        }
+
+        .places-number p{
+            display: flex;
+            flex-wrap: wrap;
+        }
+
+
+        .hebergements-and-populaires{
+            display: flex;
+            flex-direction: column-reverse;
+            justify-content: space-between;
+            gap: 15px;
+        }
+        
+        .hebergements-and-populaires section{
+            border-radius: 0;
+            padding: 30px 20px;
+        }
+
+        .populaires,
+        .hebergements{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            gap: 15px;
+            height: 100%;
+            width: 100%;
+        }
+
+        .populaires-cards,
+        .hebergements-find,
+        .activities-offer{
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            width: 100%;
+        }
+
+        .populaires-cards .card{
+            width: 100%;
+            height: 100%;
+            margin: 0;
+        }
+
+        .populaires-cards .card-content{
+            width: 100%;
+        }
+        .image-1{
+            order: 1;
+        }
+        .image-2{
+            order: 4;
+        }
+        .image-3{
+            order: 2;
+        }
+        .image-4{
+            order: 2;
+        }
+        .image-5{
+            order: 1;
+        }
+        .image-6{
+            order: 3;
+        }
+
+        .place-to-be{
+            height: 200px;
+        }
+
+        .place-to-be img{
+            height: 70%;
+            object-fit: cover;
+        }
+
+        footer{
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+            gap: 50px;
+            padding: 30px;
+            border: solid red;
+        }
+
+        .pied-de-page{
+            padding: 0;
+        }
+    }
+    /* #endregion Small devices (phones, less than 768px) */
+
+/* #endregion MEDIA QUERIES */
