--- a/css/style.css
+++ b/css/style.css
@@ -441,7 +441,7 @@ footer{
 
         .filtres{
             display: flex;
-            flex-wrap: wrap; /*a tester*/
+            flex-wrap: wrap;
             gap: 20px;
         }
 
@@ -484,6 +484,7 @@ footer{
 
         .place-to-be{
             height: 270px;
+            border: solid green; /*problème de taille*/
         }
 
         .place-to-be img{
@@ -644,7 +645,7 @@ footer{
             width: 100%;
         }
         .hebergements{
-            border: solid green; /* impossible de changer le background color en blanc*/
+            background: transparent !important;
         }
 
         .populaires-cards,
@@ -660,6 +661,7 @@ footer{
             width: 100%;
             height: 100%;
             margin: 0;
+            border: solid red; /*taille incorrecte à modifier*/
         }
 
         .populaires-cards .card-content{
