--- a/css/style.css
+++ b/css/style.css
@@ -49,22 +49,26 @@ a{
     font-size: 22px;
 }
 
-.card{
+.card,
+.find{
     background-color: white;
     border-radius: 20px;
     padding: 5px;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
 }
 
-.card img{
+.card img,
+.find img{
     object-fit: cover;
 }
 
-.card-title{
+.card-title,
+.find-title{
     font-size: 16px;
 }
 
-.card-subtitle{
+.card-subtitle,
+.find-subtitle{
     font-size: 14px;
 }
 
@@ -87,6 +91,11 @@ header{
 
 header img{
     margin: 30px;
+}
+
+.logo{
+    width: 61px;
+    height: 19px;
 }
 
 nav{
@@ -213,13 +222,9 @@ body{
         background-color: #DEEBFF;
     }
 
-    label:hover{
-        background-color: #DEEBFF;
-    }
-
     .places-number{
         display: flex;
-        flex-direction: row;
+        justify-content: flex-start;
         align-items: center;
         gap: 10px;
     }
@@ -227,8 +232,7 @@ body{
     .places-number i{
         display: flex;
         align-items: center;
-        justify-content: center;
-        padding: 7px 10px;
+        padding: 6px 9px;
         border: 1px solid #d9d9d9;
         border-radius: 50%;
     }
@@ -239,6 +243,7 @@ body{
     .hebergements-and-populaires{
         display: flex;
         flex-direction: row;
+        justify-content: space-between;
         gap: 40px;
     }
     
@@ -253,45 +258,35 @@ body{
         .hebergements{
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
             /*width: 65%;*/
             flex-grow: 1;
-            height: 611px;
             gap: 30px;
         }
         
         .hebergements-find{
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            width: 100%;
             gap: 30px;
         }
-        
-        .hebergements-find .card{
+
+        .find .find-content{
+            padding: 4px 15px 10px 15px;
             display: flex;
             flex-direction: column;
-            height: 197px;
+            justify-content: space-between;
+            gap: 8px;
         }
-        
-        .hebergements-find img{
+
+        .find img{
+            border-radius: 20px 20px 0px 0px;
+            object-fit: cover;
             width: 100%;
             height: 114px;
-            border-top-right-radius: 20px;
-            border-top-left-radius: 20px;
         }
-        
-        .hebergements-find .card-content{
-            display: flex;
-            flex-direction: column;
-            height: 64px;
-            gap: 8px;
-            padding-left: 10px;
-        }
-        
-        .hebergements-find .card-rating{
-            display: flex;
-            flex-direction: row;
-            gap: 2px;
+
+        .find-rating,
+        .card-rating{
+            border: solid fuchsia;
         }
 
         /* #endregion HOSTS */
@@ -300,7 +295,6 @@ body{
 
         .populaires{
             width: 32%;
-            height: 611px;
         }
         
         .populaires-title{
@@ -308,10 +302,18 @@ body{
             justify-content: space-between;
             align-items: center;
         }
+
+        .populaires-cards{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            gap: 30px;
+            margin-top: 30px;
+        }
         
         .populaires-cards .card{
             display: flex;
-            margin-top: 30px;
+            flex-direction: row;
         }
         
         .populaires-cards img{
@@ -323,7 +325,6 @@ body{
         
         .populaires-cards .card-content{
             width: 67%;
-            height: 134px;
             padding-left: 15px;
             display: flex;
             flex-direction: column;
@@ -332,16 +333,18 @@ body{
         }
         
         .populaires-cards .card-title{
-            margin-top: 15px;
+            margin-top: 10px;
             margin-bottom: 4px;
         }
         
-        .populaires-cards .card-rating{
-            display: flex;
-            flex-direction: row;
-            gap: 2px;
-            padding-bottom: 5px;
+        .populaires-cards .card-subtitle{
+            margin: 0;
         }
+        
+        .populaires-cards .card-rating{
+            margin-bottom: 5px;
+        }
+
 
         /* #endregion FAME PLACES */
 
@@ -365,6 +368,8 @@ body{
     }
     
     .place-to-be{
+        display: flex;
+        flex-direction: column;
         background-color: white;
         border-radius: 20px;
         filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
@@ -379,7 +384,11 @@ body{
     }
     
     .place-to-be-title{
-        padding: 20px 19px;
+        display: flex;
+        align-items: center;
+        height: 59px;
+        padding-left: 19px;
+        padding-right: 19px;
         font-size: 16px;
         font-weight: 700;
     }
@@ -462,28 +471,14 @@ footer{
         }
 
         .populaires-cards{
-            display: flex;
-            flex-direction: row;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
             justify-content: space-between;
-        }
-
-        .populaires-cards .card{
-            display: flex;
-            flex-direction: row;
+            gap: 20px;
             margin-top: 20px;
-            width: 30%;
-        }
-
-        .populaires-cards .card-title{
-            font-size: 14px;
-        }
-
-        .populaires-cards .card-subtitle{
-            font-size: 13px;
         }
 
         .place-to-be{
-            height: 270px;
             border: solid green; /*problème de taille*/
         }
 
@@ -548,7 +543,6 @@ footer{
             padding-top: 0;
             padding-bottom: 15px;
             border-top: none;
-            border-bottom-width: 100%;
             border-bottom: var(--border-top) solid #0065FC;
         }
 
@@ -612,16 +606,9 @@ footer{
 
         .places-number{
             display: flex;
-            align-items: center;
-            justify-content: flex-start;
-            border: solid orange; /*impossible de les aligner sur la même ligne*/
+            flex-direction: row;
+            border: solid orange; /*impossible de les aligner sur la même ligne lorsque l'on arrive à 516px*/
         }
-
-        .places-number p{
-            display: flex;
-            flex-wrap: wrap;
-        }
-
 
         .hebergements-and-populaires{
             display: flex;
@@ -644,8 +631,32 @@ footer{
             height: 100%;
             width: 100%;
         }
+
+        .populaires-cards{
+            margin-top: 0;
+        }
+
         .hebergements{
             background: transparent !important;
+        }
+
+        .hebergements-find .image-1{
+            order: 1;
+        }
+        .hebergements-find .image-2{
+            order: 6;
+        }
+        .hebergements-find .image-3{
+            order: 3;
+        }
+        .hebergements-find .image-4{
+            order: 4;
+        }
+        .hebergements-find .image-5{
+            order: 2;
+        }
+        .hebergements-find .image-6{
+            order: 5;
         }
 
         .populaires-cards,
@@ -657,40 +668,11 @@ footer{
             width: 100%;
         }
 
-        .populaires-cards .card{
-            width: 100%;
-            height: 100%;
-            margin: 0;
-            border: solid red; /*taille incorrecte à modifier*/
-        }
-
-        .populaires-cards .card-content{
-            width: 100%;
-        }
-        .image-1{
-            order: 1;
-        }
-        .image-2{
-            order: 4;
-        }
-        .image-3{
-            order: 2;
-        }
-        .image-4{
-            order: 2;
-        }
-        .image-5{
-            order: 1;
-        }
-        .image-6{
-            order: 3;
-        }
-
         .place-to-be{
             height: 200px;
         }
 
-        .place-to-be img{ /*problème d'affichage des images*/
+        .place-to-be img{ 
             height: 70%;
             object-fit: cover;
         }
